MS: changed paths in exec to live paths insted of testing